--- a/map.html
+++ b/map.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 3</title>
+    <title>Interactive Map</title>
 
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -30,35 +30,32 @@
     <link rel="stylesheet" type="text/css" href="static/css/style.css">
 
 </head>
-
 <body>
-    <div class="container">
-        <h1 class="display-1">Welcome to Our Project!</h1>
-    </div>
 
     <div class="container">
-        <p class="lead">
-            <h4>This is an online portal showing organ donation information!</h4>
-            <h6>Which organs have the highest demand?</h6>
-            <h6>Which states have the most donors? Or the most recepients?</h6>
-            <h6 class="lead">Find out all of this and more on this interactive website!</h6>
-        </p>
+        <h1 class="display-3">This is our interactive map!</h1>
+        <ul>
+            <li>You can toggle through the legend to select the organ of interest.</li>
+            <li>Click on the circles to get information about each states waitlist.</li>
+            <li>Refresh the page to reset the map!</li>
+        </ul>
     </div>
+    
+    <div class="container" id="map"></div>
 
     <div class="container">
-        Links to additional pages:
+        <h3 class="display-3">About the map:</h3>
+        <p>The data being visualized comes from the Organ Procurement and Transplantation Network</p>
+    </div>
+
+
+
+    <div class="container">
+        Link to additional pages:
         <nav>
-            <a href="./map.html">Interactive map </a>
+            <a href="./index.html">Home page</a>
         </nav>
     </div>
-
-    <div class="container">
-        Put something else here?
-    </div>
-
-
-
-
 
     <!-- Leaflet JS -->
     <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
@@ -76,6 +73,5 @@
 
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-
 </body>
 </html>
