Map, kidney visualizations all added

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
     <div class="container">
         Links to additional pages:
         <nav>
-            <a href="./map.html">Interactive map </a>
+            <a href="./map.html">Interactive Map</a>
+            <a href="./kidney.html">Kidney Information</a>
         </nav>
     </div>
 
