Updated home page, map, and kidney page

--- a/index.html
+++ b/index.html
@@ -46,10 +46,16 @@
     </div>
 
     <div class="container">
-        Links to additional pages:
+        Link to additional pages:
         <nav>
-            <a href="./map.html">Interactive Map</a>
-            <a href="./kidney.html">Kidney Information</a>
+            <ul>
+                <li>
+                    <a href="./map.html">Interactive Map</a>
+                </li>
+                <li>
+                    <a href="./kidney.html">Kidney Information</a>
+                </li>
+            </ul>
         </nav>
     </div>
 
