--- a/kidney.html
+++ b/kidney.html
@@ -101,8 +101,6 @@
     </ul>
   </div>
 
-  
-
   <!-- Our JavaScript file -->
   <script type="text/javascript" src="static/js/logic2.js"></script>
 
@@ -112,6 +110,20 @@
   <div class="chart-paragraph">
     <p>Data represents the waiting time distribution for different ethnicities among individuals waiting for a kidney transplant. Each ethnicity category corresponds to the waiting time distribution for kidney candidates within that particular group.</p>
   </div>
+
+  <div class="container">
+    Link to additional pages:
+    <nav>
+        <ul>
+            <li>
+                <a href="./index.html">Home page</a>
+            </li>
+            <li>
+                <a href="./map.html">Interactive Map</a>
+            </li>
+        </ul>
+    </nav>
+</div>
 
 </body>
 </html>
