--- a/map.html
+++ b/map.html
@@ -45,16 +45,22 @@
 
     <div class="container">
         <h3 class="display-3">About the map:</h3>
-        <p>The data being visualized comes from the Organ Procurement and Transplantation Network</p>
+        <p>The data being visualized comes from the <a href="https://optn.transplant.hrsa.gov/data/view-data-reports/build-advanced/">Organ Procurement and Transplantation Network.</a> 
+            Users can quickly determine which states have the largest wait lists for organs,
+            as well as the waitlist for specific organs: Kidney, liver, and heart.</p>
     </div>
-
-
 
     <div class="container">
         Link to additional pages:
         <nav>
-            <a href="./index.html">Home page</a>
-            
+            <ul>
+                <li>
+                    <a href="./index.html">Home page</a>
+                </li>
+                <li>
+                    <a href="./kidney.html">Kidney information</a>
+                </li>
+            </ul>
         </nav>
     </div>
 
