Updated home page

--- a/index.html
+++ b/index.html
@@ -60,12 +60,37 @@
     </div>
 
     <div class="container">
-        Put something else here?
+        <h4 class="dispaly-1">Group Members:</h4>
+        <ul>
+            <li>Kathleen Anderson</li>
+            <li>Marcela Sierzega</li>
+            <li>Sunderiya Bayarsaikhan</li>
+            <li>Vidul Dasan</li>
+        </ul>
     </div>
 
+    <!--
+        <ul>
+        <li>Data Collection</li>
+        <li>Data Cleaning</li>
+        <li>Database Management</li>
+    </ul>
 
+    <ul>
+        <li>Map Visualization</li>
+        <li>Data Cleaning</li>
+    </ul>
 
+    <ul>
+        <li>Data Visualization</li>
+        <li>Data Cleaning</li>
+    </ul>
 
+    <ul>
+        <li>Website Design</li>
+
+    </ul>
+    -->
 
     <!-- Leaflet JS -->
     <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
