--- a/kidney.html
+++ b/kidney.html
@@ -86,6 +86,12 @@
       top: -20px;
       right: -1300px; /* Adjust this value to position the bubble to the right */
     }
+
+    
+    body {
+        background-color: #cccccc;
+    }
+
   </style>
   
   
