--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
 <body>
     <div class="container">
-        <h1 class="display-1">Welcome to Our Project!</h1>
+        <h1 class="display-2">Organ Waitlist Analysis in the USA</h1>
     </div>
 
     <div class="container">
@@ -69,35 +69,33 @@
         </ul>
     </div>
 
-    <!--
-        <ul>
-        <li>Data Collection</li>
-        <li>Data Cleaning</li>
-        <li>Database Management</li>
-    </ul>
+    <div class="container">
+        <h4 class="display-1">Our Data:</h4>
+        <p>
+            We collected our data from one main source: 
+            The <a href="https://optn.transplant.hrsa.gov/data/view-data-reports/build-advanced/">Organ Procurement and Transplantation Network.</a> 
+            From here we filled out different criteria in the form then submittet it, which then creates a CSV which we can clean and analyse in 
+            Python, store using a SQLite database, then create visualizations using JavaScript. 
+        </p>
+        <img src="images/1data-source.png" alt="Organ Procurement and Transplantation Network Data Portal" width="666" height="888">
+        <h4 class="display-1">Observations:</h4>
+        <img src="images/Census_percent.png" alt="Breakdown of Ethnicities in the US">
+        <p>
+            The graph above shows a breakdown of the percentage of US population by ethnicity. 
+        </p>
+        <img src="images/Wait-time-percent.png" alt="Wait Time by Percentage Ethnicity">
+        <p>
+            The graph above shows a breakdown of the waitlist by ethnicity. 
+        </p>
+    </div>
 
-    <ul>
-        <li>Map Visualization</li>
-        <li>Data Cleaning</li>
-    </ul>
-
-    <ul>
-        <li>Data Visualization</li>
-        <li>Data Cleaning</li>
-    </ul>
-
-    <ul>
-        <li>Website Design</li>
-
-    </ul>
-    -->
 
     <style>
         body {
             background-color: #cccccc;
         }
     </style>
-    
+
     <!-- Leaflet JS -->
     <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js"
     integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew=="
@@ -114,6 +112,9 @@
 
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
+    <!-- Our CSS -->
+  <link rel="stylesheet" type="text/css" href="static/css/style.css">
 
 </body>
 </html>
